# sae_research

./: embedder_sae.org  experiment_log.org  intro.org  pyproject.toml  sae_lens_basic_loading_and_analysing.py
experiments/sae_bench/: METRICS.md  METRICS_TEMPLATE.md  README.md  dvc.yaml  params.yaml
experiments/sae_bench/scripts/: __init__.py  backup_utils.py  compare_absorption_results.py  extract_metrics.py  generate_report.py  init_directories.py  process_results.py  run_core_eval.py  run_optional_evals.py  run_sparse_probing.py  setup_saes.py  visualize_results.py
experiments/sparse_subspace_clustering/: csvs_to_ods.py  dvc.yaml  goodfire_sae_labels.csv  params.yaml  ssc.org
experiments/sparse_subspace_clustering/.dvc/: config
experiments/sparse_subspace_clustering/scripts/: run_csc.py  run_ssc_clustering.py  run_ssc_coefs.py
sae_research/: dictionary_learning_adapters.py  embedder_sae.py  instance_hard_thresholding_sae.py  instance_sae.py  modules.py  sae_bench_demo.py  sae_bench_utils.py  sae_features.py  sparse_subspace_clustering.py  thresholding_sae.py
sae_research/feature_families/: __init__.py  cosine_similarity_clustering.py  sparse_subspace_clustering.py  utils.py
scripts/: cli.py  train_embedder_sae.py
test/: test_embedder_sae.py
