[project]
name = "sae-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "sae-lens>=6.11.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "trackio==0.5.0",
    "transformer-lens>=2.16.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
