[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sae-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "dvc>=3.63.0",
    "fire>=0.7.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "sae-bench==0.4.2",
    "sae-lens==5.4.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "trackio==0.5.0",
    "transformer-lens>=2.16.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[project.scripts]
find_sae_bench_models = "scripts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sae_research"]
